--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@
 #
 #    pip-compile requirements.in
 #
-antlr4-python3-runtime==4.7.2
+antlr4-python3-runtime==4.8  # via -r requirements.in
 mpmath==1.1.0             # via sympy
-sympy==1.4
+sympy==1.6.2              # via -r requirements.in
