--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ antlr4-python3-runtime==4.11.1
     # via -r requirements.in
 mpmath==1.2.1
     # via sympy
-sympy==1.11.1
+sympy @ git+https://github.com/purdue-tlt/sympy.git@1.10-equals-fix
     # via -r requirements.in
