rename parser grammar, organize parser files, update compile script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
 		"tests"
 	],
 	"python.linting.enabled": true,
-	"python.linting.pycodestyleEnabled": true
+	"python.linting.pycodestyleEnabled": true,
+	"files.associations": {
+		"chrono": "cpp"
+	}
 }
