--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
-[build-system]
+[build - system]
 requires = [
     "setuptools>=42",
     "scikit-build>=0.13",
     "cmake>=3.18",
-    "ninja"
+    "ninja",
+    "conan"
 ]
-build-backend = "setuptools.build_meta"
+build - backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
