update cmake to generate antlr cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 project("latex2antlrJson")
 
 # install pybind11
+# ----------------------------------------------------------------------------------------
+
 include(FetchContent)
 FetchContent_Declare(
 	pybind11
@@ -16,6 +18,8 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(pybind11)
 
 # install conan requirements
+# ----------------------------------------------------------------------------------------
+
 if(DEFINED SKBUILD)
 
 	if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
@@ -35,14 +39,38 @@ else()
 	conan_basic_setup()
 endif()
 
+# compile antlr cpp lexer and parser
+# ----------------------------------------------------------------------------------------
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+find_package(antlr4-runtime REQUIRED)
+find_package(antlr4-generator REQUIRED)
+
+set(ANTLR4_JAR_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
+
+antlr4_generate(
+	latex2antlr
+	${CMAKE_CURRENT_SOURCE_DIR}/LATEX.g4
+	BOTH
+	FALSE
+	FALSE
+	"latex2antlr"
+)
+
+include_directories(${PROJECT_BINARY_DIR} ${ANTLR4_INCLUDE_DIR} ${ANTLR4_INCLUDE_DIR_latex2antlr})
+
+# ----------------------------------------------------------------------------------------
+
 # add cpp antlr lexer and parser
-add_library(latex2antlr src/latex2sympy/parser/cpp/LATEXLexer.cpp src/latex2sympy/parser/cpp/LATEXParser.cpp)
+add_library(latex2antlr ${ANTLR4_SRC_FILES_latex2antlr})
 
 # create python module
 set(python_module_name latex2antlrJson)
+
 pybind11_add_module(${python_module_name} src/latex2sympy/parser/cpp/latex2antlrJson.cpp)
 target_link_libraries(${python_module_name} PUBLIC latex2antlr ${CONAN_LIBS})
-target_compile_features(latex2antlrJson PUBLIC cxx_std_17)
-set_target_properties(latex2antlrJson PROPERTIES SUFFIX ".so")
+target_compile_features(${python_module_name} PUBLIC cxx_std_17)
+set_target_properties(${python_module_name} PROPERTIES SUFFIX ".so")
 
 install(TARGETS ${python_module_name} DESTINATION .)
