--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,28 +44,29 @@ endif()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-find_package(antlr4-runtime REQUIRED)
-find_package(antlr4-generator REQUIRED)
+# add external build for antlrcpp
+include(ExternalAntlr4Cpp)
+# add antrl4cpp artifacts to project environment
+include_directories(${ANTLR4_INCLUDE_DIRS})
+# set variable pointing to the antlr tool that supports C++
+set(ANTLR_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
+# add macros to generate ANTLR Cpp code from grammar
+find_package(ANTLR REQUIRED)
 
-set(ANTLR4_JAR_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
+# Call macro to add lexer and grammar to your build dependencies.
+antlr_target(LATEX LATEX.g4 
+			LEXER
+			PARSER
+			PACKAGE latex2antlr)
 
-antlr4_generate(
-	latex2antlr
-	${CMAKE_CURRENT_SOURCE_DIR}/LATEX.g4
-	BOTH
-	FALSE
-	FALSE
-	"latex2antlr"
-)
+# include generated files in project environment
+include_directories(${ANTLR_LATEX_OUTPUT_DIR})
 
-include_directories(${PROJECT_BINARY_DIR} ${ANTLR4_INCLUDE_DIR} ${ANTLR4_INCLUDE_DIR_latex2antlr})
-
-# ----------------------------------------------------------------------------------------
-
-# add cpp antlr lexer and parser
-add_library(latex2antlr ${ANTLR4_SRC_FILES_latex2antlr})
+# add cpp antlr lexer and parser to library
+add_library(latex2antlr ${ANTLR_LATEX_CXX_OUTPUTS})
 
 # create python module
+# ----------------------------------------------------------------------------------------
 set(python_module_name latex2antlrJson)
 
 pybind11_add_module(${python_module_name} src/latex2sympy/parser/cpp/latex2antlrJson.cpp)
