don't use antlr from conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,8 @@ if(DEFINED SKBUILD)
 
 	include(${CMAKE_BINARY_DIR}/conan.cmake)
 
-	conan_cmake_run(REQUIRES antlr4-cppruntime/4.11.1 jsoncpp/1.9.5
+	# conan_cmake_run(REQUIRES antlr4-cppruntime/4.11.1 jsoncpp/1.9.5
+	conan_cmake_run(REQUIRES jsoncpp/1.9.5
 					BASIC_SETUP
 					BUILD missing)
 
@@ -42,10 +43,24 @@ if(DEFINED SKBUILD)
 
 	list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+	# required if linking to static library
+	add_definitions(-DANTLR4CPP_STATIC)
+
+	# using /MD flag for antlr4_runtime (for Visual C++ compilers only)
+	# set(ANTLR4_WITH_STATIC_CRT OFF)
+
+	# Specify the version of the antlr4 library needed for this project.
+	# By default the latest version of antlr4 will be used.  You can specify a
+	# specific, stable version by setting a repository tag value or a link
+	# to a zip file containing the libary source.
+	# set(ANTLR4_TAG 4.11.1)
+	# set(ANTLR4_ZIP_REPOSITORY https://github.com/antlr/antlr4/archive/refs/tags/4.11.1.zip)
+
 	# add external build for antlrcpp
 	include(ExternalAntlr4Cpp)
 	# add antrl4cpp artifacts to project environment
 	include_directories(${ANTLR4_INCLUDE_DIRS})
+
 	# set variable pointing to the antlr tool that supports C++
 	set(ANTLR_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
 	# add macros to generate ANTLR Cpp code from grammar
@@ -61,21 +76,21 @@ if(DEFINED SKBUILD)
 	include_directories(${ANTLR_LATEX_OUTPUT_DIR})
 
 	# add cpp antlr lexer and parser to library
-	add_library(latex2antlr ${ANTLR_LATEX_CXX_OUTPUTS})
+	# add_library(latex2antlr ${ANTLR_LATEX_CXX_OUTPUTS})
 else()
 	include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 	conan_basic_setup()
 
 	# add cpp antlr lexer and parser to library
-	add_library(latex2antlr src/latex2sympy/parser/cpp/LATEXLexer.cpp src/latex2sympy/parser/cpp/LATEXParser.cpp)
+	# add_library(latex2antlr src/latex2sympy/parser/cpp/LATEXLexer.cpp src/latex2sympy/parser/cpp/LATEXParser.cpp)
 endif()
 
 # create python module
 # ----------------------------------------------------------------------------------------
 set(python_module_name latex2antlrJson)
 
-pybind11_add_module(${python_module_name} src/latex2sympy/parser/cpp/latex2antlrJson.cpp)
-target_link_libraries(${python_module_name} PUBLIC latex2antlr ${CONAN_LIBS})
+pybind11_add_module(${python_module_name} src/latex2sympy/parser/cpp/latex2antlrJson.cpp ${ANTLR_LATEX_CXX_OUTPUTS})
+target_link_libraries(${python_module_name} PUBLIC antlr4_static ${CONAN_LIBS})
 target_compile_features(${python_module_name} PUBLIC cxx_std_17)
 set_target_properties(${python_module_name} PROPERTIES SUFFIX ".so")
 
