--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,79 +17,75 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(pybind11)
 
+set(python_module_name latex2antlrJson)
+
 # install conan requirements
 # ----------------------------------------------------------------------------------------
 
-if(DEFINED SKBUILD)
-
-	if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
-		message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
-		file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/0.18.1/conan.cmake"
-					"${CMAKE_BINARY_DIR}/conan.cmake"
-					TLS_VERIFY ON)
-	endif()
-
-	include(${CMAKE_BINARY_DIR}/conan.cmake)
-
-	# conan_cmake_run(REQUIRES antlr4-cppruntime/4.11.1 jsoncpp/1.9.5
-	conan_cmake_run(REQUIRES jsoncpp/1.9.5
-					BASIC_SETUP
-					BUILD missing)
-
-	
-	# compile antlr cpp lexer and parser
-	# ----------------------------------------------------------------------------------------
-
-	list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-
-	# required if linking to static library
-	add_definitions(-DANTLR4CPP_STATIC)
-
-	# using /MD flag for antlr4_runtime (for Visual C++ compilers only)
-	# set(ANTLR4_WITH_STATIC_CRT OFF)
-
-	# Specify the version of the antlr4 library needed for this project.
-	# By default the latest version of antlr4 will be used.  You can specify a
-	# specific, stable version by setting a repository tag value or a link
-	# to a zip file containing the libary source.
-	# set(ANTLR4_TAG 4.11.1)
-	# set(ANTLR4_ZIP_REPOSITORY https://github.com/antlr/antlr4/archive/refs/tags/4.11.1.zip)
-
-	# add external build for antlrcpp
-	include(ExternalAntlr4Cpp)
-	# add antrl4cpp artifacts to project environment
-	include_directories(${ANTLR4_INCLUDE_DIRS})
-
-	# set variable pointing to the antlr tool that supports C++
-	set(ANTLR_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
-	# add macros to generate ANTLR Cpp code from grammar
-	find_package(ANTLR REQUIRED)
-
-	# Call macro to add lexer and grammar to your build dependencies.
-	antlr_target(LATEX LATEX.g4 
-				LEXER
-				PARSER
-				PACKAGE latex2antlr)
-
-	# include generated files in project environment
-	include_directories(${ANTLR_LATEX_OUTPUT_DIR})
-
-	# add cpp antlr lexer and parser to library
-	# add_library(latex2antlr ${ANTLR_LATEX_CXX_OUTPUTS})
-else()
-	include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-	conan_basic_setup()
-
-	# add cpp antlr lexer and parser to library
-	# add_library(latex2antlr src/latex2sympy/parser/cpp/LATEXLexer.cpp src/latex2sympy/parser/cpp/LATEXParser.cpp)
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+	message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+	file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/0.18.1/conan.cmake"
+				"${CMAKE_BINARY_DIR}/conan.cmake"
+				TLS_VERIFY ON)
 endif()
 
-# create python module
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+
+# set default arch
+set(CONAN_SETTING_ARCH x86_64)
+# choose correct arch for conan
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
+	set(CONAN_SETTING_ARCH armv8)
+endif()
+
+conan_cmake_run(REQUIRES jsoncpp/1.9.5
+				BASIC_SETUP
+				BUILD missing
+				ARCH ${CONAN_SETTING_ARCH})
+
+# compile antlr cpp lexer and parser
 # ----------------------------------------------------------------------------------------
-set(python_module_name latex2antlrJson)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+# required if linking to static library
+add_definitions(-DANTLR4CPP_STATIC)
+
+# using /MD flag for antlr4_runtime (for Visual C++ compilers only)
+# set(ANTLR4_WITH_STATIC_CRT OFF)
+
+# Specify the version of the antlr4 library needed for this project.
+# By default the latest version of antlr4 will be used.  You can specify a
+# specific, stable version by setting a repository tag value or a link
+# to a zip file containing the libary source.
+# set(ANTLR4_TAG 4.11.1)
+# set(ANTLR4_ZIP_REPOSITORY https://github.com/antlr/antlr4/archive/refs/tags/4.11.1.zip)
+
+# add external build for antlrcpp
+include(ExternalAntlr4Cpp)
+# add antrl4cpp artifacts to project environment
+include_directories(${ANTLR4_INCLUDE_DIRS})
+
+# set variable pointing to the antlr tool that supports C++
+set(ANTLR_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/antlr-4.11.1-complete.jar)
+# add macros to generate ANTLR Cpp code from grammar
+find_package(ANTLR REQUIRED)
+
+# Call macro to add lexer and grammar to your build dependencies.
+antlr_target(LATEX LATEX.g4 
+			LEXER
+			PARSER
+			PACKAGE latex2antlr)
+
+# include generated files in project environment
+include_directories(${ANTLR_LATEX_OUTPUT_DIR})
 
 pybind11_add_module(${python_module_name} src/latex2sympy/parser/cpp/latex2antlrJson.cpp ${ANTLR_LATEX_CXX_OUTPUTS})
 target_link_libraries(${python_module_name} PUBLIC antlr4_static ${CONAN_LIBS})
+
+# create python module
+# ----------------------------------------------------------------------------------------
+
 target_compile_features(${python_module_name} PUBLIC cxx_std_17)
 set_target_properties(${python_module_name} PROPERTIES SUFFIX ".so")
 
