--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=42",
-    "scikit-build>=0.13",
-    "cmake>=3.18",
-    "ninja",
-    "conan"
+    "setuptools>=42"
 ]
 build-backend = "setuptools.build_meta"
 
