--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,12 @@
 		"test_*.py"
 	],
 	"python.testing.pytestEnabled": true,
-	"python.testing.nosetestsEnabled": false,
 	"python.testing.unittestEnabled": false,
 	"python.testing.pytestArgs": [
 		"tests"
 	],
-	"python.linting.enabled": true,
-	"python.linting.pycodestyleEnabled": true
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.autopep8",
+		"editor.formatOnSave": true
+	}
 }
