add flake8 and isort to dev reqs, update other reqs, update auto-formatting/linting rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,12 @@
 	],
 	"[python]": {
 		"editor.defaultFormatter": "ms-python.autopep8",
-		"editor.formatOnSave": true
-	}
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": "explicit"
+		}
+	},
+	"autopep8.importStrategy": "fromEnvironment",
+	"flake8.importStrategy": "fromEnvironment",
+	"isort.importStrategy": "fromEnvironment"
 }
