--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,10 @@
 {
 	"recommendations": [
+		"ms-python.python",
+		"ms-python.debugpy",
 		"ms-python.autopep8",
-		"ms-python.flake8"
+		"ms-python.flake8",
+		"ms-python.isort",
+		"ms-python.vscode-pylance"
 	]
 }
