--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [pycodestyle]
 max-line-length = 120
-ignore = E501,W504
 
 [flake8]
 max-line-length = 120
-ignore = E501,W504
+
+[isort]
+multi_line_output = 6
