--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,9 @@
 	"recommendations": [
 		"ms-python.python",
 		"ms-python.debugpy",
-		"ms-python.autopep8",
-		"ms-python.flake8",
 		"ms-python.isort",
+		"ms-python.flake8",
+		"ms-python.black-formatter",
 		"ms-python.vscode-pylance"
 	]
 }
