--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,9 @@
 {
 	"recommendations": [
 		"ms-python.python",
+		"ms-python.vscode-pylance",
 		"ms-python.debugpy",
-		"ms-python.isort",
-		"ms-python.flake8",
-		"ms-python.black-formatter",
-		"ms-python.vscode-pylance"
+		"omnilib.ufmt",
+		"ms-python.flake8"
 	]
 }
