--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,9 @@
 		"tests"
 	],
 	"[python]": {
-		"editor.defaultFormatter": "ms-python.black-formatter",
-		"editor.formatOnSave": true,
-		"editor.codeActionsOnSave": {
-			"source.organizeImports": "explicit"
-		}
+		"editor.defaultFormatter": "omnilib.ufmt",
+		"editor.formatOnSave": true
 	},
-	"black-formatter.importStrategy": "fromEnvironment",
-	"flake8.importStrategy": "fromEnvironment",
-	"isort.importStrategy": "fromEnvironment"
+	"ufmt.importStrategy": "fromEnvironment",
+	"flake8.importStrategy": "fromEnvironment"
 }
